@@ -51,6 +51,7 @@ public interface EntityCondition extends Serializable {
 
     /** Evaluate the condition in memory. */
     boolean mapMatches(Map<String, Object> map);
+    boolean mapMatchesAny(Map<String, Object> map);
     /** Create a map of name/value pairs representing the condition. Returns false if the condition can't be
      * represented as simple name/value pairs ANDed together. */
     boolean populateMap(Map<String, Object> map);
