@@ -22,6 +22,11 @@ Bug Fixes
 - Fixed NPE in EntityFind.oneMaster() when the master value isn't found,
   now returns null with no error; fixes moqui-runtime issue #18
 - Fixed ElFinder rm (moqui-runtime GitHub issue #23), response for upload
+- Screen sub-content directories treated as not found so directory entries
+  not listed (GitHub moqui-framework issue #47)
+- In entity cache auto clear for list of view-entity fixed mapping of
+  member entity fields to view entity alias, and partial match when only
+  some view entity fields are on a member entity
 
 ===========================================================================
 Release 1.6.2 - 26 Mar 2016
